<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AStarActivity"
        android:background="@color/colorPrimary">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="@color/colorPrimaryDark"
            android:id="@+id/constraintLayoutAccessoryTools"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <ImageButton
                android:layout_width="54dp"
                android:layout_height="54dp"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:background="#00FFFFFF" android:scaleType="centerInside"
                app:layout_constraintVertical_bias="0.0"
                android:id="@+id/imageButtonBack"
                android:onClick="processButtonPressing"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/imagebutton_back"/>
    </android.support.constraint.ConstraintLayout>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageForSplines" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAccessoryTools"
            android:contentDescription="@string/astar_activity_imageview_astarmap" android:scaleType="fitCenter"
            tools:srcCompat="#FFFFFF"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/splines_activitu_button_drawsplines_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/buttonDrawSplines" android:layout_weight="1"
                android:contentDescription="@string/splines_activity_button_drawsplines"
                android:background="@color/colorPrimaryDark" android:textColor="@color/buttonColor"
                android:onClick="processButtonPressing"/>
        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/splines_activity_button_clear_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/buttonClear" android:layout_weight="1"
                android:background="@color/colorPrimaryDark" android:textColor="@color/buttonColor"
                android:onClick="processButtonPressing"/>
    </LinearLayout>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarSplines" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAccessoryTools"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>