<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AStarActivity"
        android:background="@color/colorPrimary">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="@color/colorPrimaryDark"
            android:id="@+id/constraintLayoutAccessoryTools"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <ImageButton
                android:layout_width="54dp"
                android:layout_height="54dp"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:background="#00FFFFFF" android:scaleType="centerInside"
                app:layout_constraintVertical_bias="0.0"
                android:id="@+id/imageButtonBack"
                android:onClick="processButtonPressing"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/imagebutton_back"/>
    </android.support.constraint.ConstraintLayout>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@android:color/background_light"
            android:id="@+id/imageForMasking" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAccessoryTools"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintBottom_toTopOf="@id/buttonMask"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/masking_activity_imaveview_imageformasking"/>
    <Button
            android:text="@string/masking_activity_button_mask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="609dp"
            tools:layout_editor_absoluteX="4dp" android:id="@+id/buttonMask"
            android:onClick="processButtonPressing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorPrimaryDark"
            android:textColor="@color/buttonColor"/>/>

</android.support.constraint.ConstraintLayout>